@@ -8,7 +8,8 @@ Hadoop ETL: added JsonUtils (#323)
 Hadoop ETL: added support for 3 and 4 return values from MapTransformer (#324)
 Hadoop ETL: updated GetJsonPayload to use Argonaut and renamed to JsonPayload (#339)
 Hadoop ETL: added ability to mask IP addresses in ETL (#309)
-
+Hadoop ETL: refr_ and page_ fields now stored raw (#374)
+Hadoop ETL: defensively fixed raw spaces in page and referer URLs (#346)
 Hadoop ETL: fixed regression, single-encoded %s logic didn't account for % itself (#347)
 Hadoop ETL: added unit tests for fixTabsNewlines (#332)
 Hadoop ETL: tests now report the failing CanonicalOutput field (#325)
@@ -30,7 +31,7 @@ StorageLoader: added COMPROWS to config and --include compupdate option (#344)
 StorageLoader: changed Postgres VACUUM FULL to VACUUM (#357)
 StorageLoader: added TRUNCATECOLUMNS for Redshift load (#360)
 
-REMOVE: Hadoop ETL: defensively fixed raw spaces in page and referer URLs (#346)
+REMOVE: 
 ADD: fix problem where refr and url are being decoded one too many times - TODO
 
 Version 0.8.9 (2013-09-05)
